--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-aulas/01_conceitosBasicos/bin
-aulas/01_conceitosBasicos/lib
-aulas/01_conceitosBasicos/.vscode
-aulas/02_vetores/.vscode
+bin/
+lib/
+.vscode/
+
